unpackaged/main/default/objects/ints__OAuth_Token__c/ints__OAuth_Token__c.object-meta.xml
<CustomObject>
    <label>OAuth Token</label>
    <nameField>
        <label>OAuth Token Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OAuth Tokens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>