unpackaged/main/default/objects/ints__OAuth_Token__c/fields/ints__Is_Valid__c.field-meta.xml
<CustomField>
    <fullName>ints__Is_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Valid</label>
    <type>Checkbox</type>
</CustomField>