unpackaged/main/default/objects/ints__OAuth_Token__c/fields/ints__OAuth_Settings__c.field-meta.xml
<CustomField>
    <fullName>ints__OAuth_Settings__c</fullName>
    <label>OAuth Settings</label>
    <referenceTo>ints__OAuth_Settings__c</referenceTo>
    <relationshipLabel>OAuth Tokens</relationshipLabel>
    <relationshipName>OAuth_Tokens</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>