unpackaged/main/default/objects/ints__OAuth_Token__c/fields/ints__Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>ints__Refresh_Token__c</fullName>
    <label>Refresh Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>