unpackaged/main/default/objects/ints__OAuth_Token__c/fields/ints__Token__c.field-meta.xml
<CustomField>
    <fullName>ints__Token__c</fullName>
    <label>Access Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>