unpackaged/main/default/objects/ints__OAuth_Token__c/fields/Valid_Time__c.field-meta.xml
<CustomField>
    <fullName>Valid_Time__c</fullName>
    <label>Valid Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>